Media Session: MediaSession constructor 'kind' argument optional https://bugs.webkit.org/show_bug.cgi?id=148527

Reviewed by Jer Noble.

Source/WebCore:

No new tests, updated media/session/session-creation.html.

* Modules/mediasession/MediaSession.cpp:
(WebCore::MediaSession::parseKind): Treat null kind "content".
(WebCore::MediaSession::MediaSession): Delete Document* version.
* Modules/mediasession/MediaSession.h: Make constructor private.
* Modules/mediasession/MediaSession.idl:

* WebCore.xcodeproj/project.pbxproj: Add JSMediaSessionCustom.cpp.

* bindings/js/JSMediaSessionCustom.cpp: Added.
(WebCore::constructJSMediaSession):

* dom/Document.cpp:
(WebCore::Document::defaultMediaSession): Call MediaSession::create.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::session): Compare session with document.defaultMediaSession, not
  its kind.
(WebCore::HTMLMediaElement::setSession): Update comments.

LayoutTests:

* media/session/content-interruptions.html: Restructure to make less timing dependent. Minor cleanup.
* media/session/session-creation-expected.txt:
* media/session/session-creation.html: Test default MediaSession constructor argument.


Canonical link: https://commits.webkit.org/166628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189031 268f45cc-cd09-0410-ab3c-d52691b4dbfc