Source/WebCore/dom/Document.cpp
@@ -6701,7 +6701,7 @@ void Document::setShouldPlayToPlaybackTarget(uint64_t clientId, bool shouldPlay)
 MediaSession& Document::defaultMediaSession()
 {
     if (!m_defaultMediaSession)
-        m_defaultMediaSession = adoptRef(*new MediaSession(*this));
+        m_defaultMediaSession = MediaSession::create(*scriptExecutionContext());
 
     return *m_defaultMediaSession;
 }
